--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@tanstack/query-core": "^5.90.20",
     "@tanstack/react-devtools": "^0.7.0",
+    "@tanstack/react-query": "^5.90.20",
     "@tanstack/react-router": "^1.132.0",
     "@tanstack/react-router-devtools": "^1.132.0",
     "@tanstack/react-router-ssr-query": "^1.131.7",
     "@tanstack/react-start": "^1.132.0",
+    "@tanstack/router-core": "^1.157.16",
     "@tanstack/router-plugin": "^1.132.0",
     "lucide-react": "^0.561.0",
     "nitro": "npm:nitro-nightly@latest",
